[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="GUI" parent="." instance=ExtResource( 3 )]
[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
